Document remaining shutdown ownership gaps after native cleanup audit